--- a/roles/deploy_osh/templates/helm_vars_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_common.yaml.j2
@@ -87,6 +87,17 @@ endpoints:
 {% endif %}
 {% if users.host_fqdn_override is defined %}
     host_fqdn_override:
+{% if endpoint == 'identity' and not multi_region.master.master_role %}
+      default: {{multi_region.slaves.ks_endpoint}}
+      public: {{multi_region.slaves.ks_endpoint}}
+      internal: {{multi_region.slaves.ks_endpoint}}
+    port:
+      api:
+        default: 80
+        internal: 80
+        public: 80
+{% else %}
       {{users.host_fqdn_override | to_nice_yaml | indent(6)}}
+{% endif %}
 {% endif %}
 {% endfor %}
