--- a/roles/deploy_osh/templates/cloud.yaml.j2
+++ b/roles/deploy_osh/templates/cloud.yaml.j2
@@ -10,4 +10,8 @@ clouds:
       user_domain_name: {{ep.user_domain_name}}
 {% endwith %}
       password: {{identity_admin_pwd}}
-      auth_url: 'http://keystone.openstack.svc.{{int_domain_suffix}}/v3'
+{% if multi_region.master %}
+      auth_url: 'http://{{endpoints.identity.host_fqdn_override.public.host}}/v3'
+{% else %}
+      auth_url: '{{keystone_endpoint.auth_url}}'
+{% endif %}
